# SBSGenerator

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: deploy.yml  integrate.yml
python/sbsgenerator/: __init__.py  download.py  generator.py
python/tests/: test_all.py  test_sbsgenerator.py
python/tests/files/: test.vcf
src/: lib.rs
